# whistlerlib

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  LINK_CONVENTIONS.md  MIGRATION.md  README.md  pyproject.toml
.claude/skills/docs-deploy/: SKILL.md
.claude/skills/publish-docker/: SKILL.md
.claude/skills/pypi-release/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml  docs-deploy.yml
docker/: Dockerfile.master  Dockerfile.worker  docker-compose.yml  smoke.py  stack.yml
docs/: README.md  intro.md
docs/api/: README.md
docs/concepts/: algorithm-families.md  architecture.md  context-and-datasets.md
docs/installation/: docker.md  pip.md
docs/migration/: from-0.1.0.md  from-pre-revival.md
docs/tutorials/: 01-quickstart-hashtag-histogram.md  02-mention-histogram.md  03-ngram-histogram-bilingual.md  04-sentiment-spanish.md  05-hashtag-coonet.md  06-mention-coonet.md  07-r-bridge-mfhashtags.md  README.md
examples/: README.md  conftest.py
examples/01-quickstart-hashtag-histogram/: README.md  example.py  test_example.py
examples/02-mention-histogram/: README.md  example.py  test_example.py
examples/03-ngram-histogram-bilingual/: README.md  example.py  test_example.py
examples/04-sentiment-spanish/: README.md  example.py  test_example.py
examples/05-hashtag-coonet/: README.md  example.py  test_example.py
examples/06-mention-coonet/: README.md  example.py  test_example.py
examples/07-r-bridge-mfhashtags/: README.md  example.py  test_example.py
scripts/: check_doc_links.py  sync_tutorials.py
src/whistlerlib/: __init__.py  context.py  dataset.py  logger.py
src/whistlerlib/clients/: __init__.py
src/whistlerlib/clients/dataset_repository/: dataset_repository_client.py
src/whistlerlib/config/: config.py
src/whistlerlib/dask/alt_python_algs/: __init__.py  algs.py
src/whistlerlib/dask/alt_python_algs/funcs/: cleanText.py  getHashtags.py  getNgrams.py  getSentimentScore.py
src/whistlerlib/dask/base_algs/: __init__.py  algs.py
src/whistlerlib/dask/coonet_algs/: __init__.py  algs.py
src/whistlerlib/dask/coonet_algs/funcs/: __init__.py  funcs.py
src/whistlerlib/dask/r_algs/: __init__.py  algs.py
src/whistlerlib/dask/r_algs/funcs/: r_script_process.py
src/whistlerlib/dask/r_algs/funcs/getmentions/: getMentions.py
src/whistlerlib/dask/r_algs/funcs/mfhashtags/: getMFHashtags.R  getMFHashtags.py
src/whistlerlib/dask/r_algs/funcs/ngrams/: getNgrams.py  getWordCloud.R  getWordCloud.py
src/whistlerlib/dask/r_algs/funcs/sentiments/: __init__.py  cleanText.R  getSentiments.py
tests/: conftest.py  test_hashtag_histogram_alt_python.py  test_hashtag_histogram_r.py  test_hashtag_weighted_coonet.py  test_mention_histogram_alt_python.py  test_mention_histogram_r.py  test_mention_weighted_coonet.py  test_ngram_histogram_alt_python.py  test_ngram_histogram_r.py  test_sentiment_histogram_and_sum_r.py  test_sentiment_range_spanish_alt_python.py  test_simple.py
tests/integration/: conftest.py  test_01_quickstart_hashtag_histogram.py  test_02_mention_histogram.py  test_03_ngram_histogram_bilingual.py  test_04_sentiment_spanish.py  test_05_hashtag_coonet.py  test_06_mention_coonet.py  test_07_r_bridge_mfhashtags.py
tests/unit/: conftest.py  test_config.py  test_context.py  test_dataset.py  test_dataset_repository_client.py
tests/unit/dask/: test_alt_python_algs.py  test_base_algs.py  test_coonet_algs.py  test_r_algs.py
tests/unit/funcs/: test_cleanText.py  test_getHashtags.py  test_getMentions.py  test_getNgrams.py  test_getSentimentScore.py
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: changelog.mdx  citation.mdx  intro.md  quickstart.md
website/docs/api/: index.mdx
website/docs/concepts/: algorithm-families.md  architecture.md  context-and-datasets.md
website/docs/installation/: docker.md  pip.md
website/docs/migration/: from-0.1.0.md
website/docs/tutorials/: 01-quickstart-hashtag-histogram.md  02-mention-histogram.md  03-ngram-histogram-bilingual.md  04-sentiment-spanish.md  05-hashtag-coonet.md  06-mention-coonet.md  07-r-bridge-mfhashtags.md  index.mdx
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: about.module.css  about.tsx  index.module.css  index.tsx
website/static/: CNAME
whistlerlib/: context.py  dataset.py  logger.py  time_profile.py
whistlerlib/clients/dataset_repository/: __init__.py  dataset_repository_client.py
whistlerlib/config/: config.py
whistlerlib/dask/alt_python_algs/: __init__.py
whistlerlib/dask/alt_python_algs/funcs/: getMentions.py
whistlerlib/dask/base_algs/: algs.py
whistlerlib/dask/coonet_algs/: algs.py
whistlerlib/dask/coonet_algs/funcs/: __init__.py  funcs.py
whistlerlib/dask/r_algs/: __init__.py
whistlerlib/dask/r_algs/funcs/: r_script_process.py
whistlerlib/dask/r_algs/funcs/getmentions/: __init__.py  getMentions.R  getMentions.py
whistlerlib/dask/r_algs/funcs/mfhashtags/: __init__.py  getMFHashtags.R  getMFHashtags.py
whistlerlib/dask/r_algs/funcs/ngrams/: __init__.py  getNgrams.R  getNgrams.py
whistlerlib/dask/r_algs/funcs/sentiments/: getSentiments.R
