[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "whistlerlib"
version = "0.2.0"
description = "Distributed SNA & NLP for X/Twitter datasets on Dask: histograms, sentiment, co-occurrence networks."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Alberto García-Robledo", email = "agarcia@centrogeo.edu.mx" },
]
keywords = [
    "dask",
    "distributed-computing",
    "social-network-analysis",
    "nlp",
    "twitter",
    "x-platform",
    "sentiment-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Distributed Computing",
    "Topic :: Text Processing :: Linguistic",
]

# Runtime dependencies — modern floors set per the Phase 2 plan. Phase 1 only
# verifies that `pip install -e .` resolves; actual API compatibility (Dask
# graph behaviour, pandas 2.x dtypes, etc.) is the focus of Phase 2.
dependencies = [
    "dask[distributed]>=2024.1",
    "pandas>=2.2",
    "numpy>=1.26,<3",
    "pyarrow>=15",
    "fsspec>=2024.1",
    "cloudpickle>=3",
    "msgpack>=1.0",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "igraph>=0.11",
    "advertools>=0.16",
    "sentiment-analysis-spanish>=0.0.25",
]

[project.optional-dependencies]
tests = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
]
examples = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1",
]
# R runtime is a system dependency (not pip-installable); install separately
# in the worker Docker image (Phase 5). This extra is reserved for any
# Python-side packages the R bridge ends up needing.
r-bridge = []
dev = [
    "whistlerlib[tests,examples]",
    "ruff>=0.5",
    "build>=1.2",
    "twine>=5",
]

[project.urls]
# TODO(Phase 7): replace placeholders once the public repo URL is finalized.
Homepage = "https://github.com/CentroGeo/whistlerlib"
Repository = "https://github.com/CentroGeo/whistlerlib"
Issues = "https://github.com/CentroGeo/whistlerlib/issues"
Changelog = "https://github.com/CentroGeo/whistlerlib/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/whistlerlib"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "MIGRATION.md",
    "pyproject.toml",
]
