[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "whistlerlib"
version = "0.2.0"
description = "Distributed SNA & NLP for X/Twitter datasets on Dask: histograms, sentiment, co-occurrence networks."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Alberto García-Robledo", email = "agarcia@centrogeo.edu.mx" },
]
keywords = [
    "dask",
    "distributed-computing",
    "social-network-analysis",
    "nlp",
    "twitter",
    "x-platform",
    "sentiment-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Distributed Computing",
    "Topic :: Text Processing :: Linguistic",
]

# Runtime dependencies, modern floors set per the Phase 2 plan. Phase 1 only
# verifies that `pip install -e .` resolves; actual API compatibility (Dask
# graph behaviour, pandas 2.x dtypes, etc.) is the focus of Phase 2.
dependencies = [
    "dask[distributed]>=2024.1",
    "pandas>=2.2",
    "numpy>=1.26,<3",
    "pyarrow>=15",
    "fsspec>=2024.1",
    "cloudpickle>=3",
    "msgpack>=1.0",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "igraph>=0.11",
    "advertools>=0.16",
    "sentiment-analysis-spanish>=0.0.25",
    "emoji>=2",
]

[project.optional-dependencies]
tests = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-timeout>=2.3",
    "hypothesis>=6.100",
]
examples = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1",
]
# R runtime is a system dependency (not pip-installable); install separately
# in the worker Docker image (Phase 5). This extra is reserved for any
# Python-side packages the R bridge ends up needing.
r-bridge = []
dev = [
    "whistlerlib[tests,examples]",
    "ruff>=0.5",
    "build>=1.2",
    "twine>=5",
]

[project.urls]
Homepage = "https://whistlerlib.observatoriogeo.mx"
Documentation = "https://whistlerlib.observatoriogeo.mx"
Repository = "https://github.com/observatoriogeo/whistlerlib"
Issues = "https://github.com/observatoriogeo/whistlerlib/issues"
Changelog = "https://github.com/observatoriogeo/whistlerlib/blob/main/CHANGELOG.md"
Paper = "https://doi.org/10.1007/s11042-024-19827-z"

[tool.pytest.ini_options]
# The DEFAULT `pytest` run executes the unit suite and discovers (but
# deselects) the docker-backed example tests, total ~10s, suitable for
# every-commit / every-edit feedback.
#
# Phase 2's full integration suite under `tests/test_*.py` runs against a
# session-scoped LocalCluster and takes 3–5 min; opt in explicitly:
#   uv run pytest tests/ --ignore=tests/unit
# The CI workflow runs unit + integration + (gated) example tests in
# separate steps.
testpaths = ["tests/unit", "tests/integration"]
# Hard fail any single test that takes more than 30s, for verification
# (not profiling), no individual test should be long-running.
timeout = 30
timeout_method = "thread"
# Default runs exclude `slow` tests (sentiment-analysis-spanish model load,
# anything else needing >5s of real work) AND `docker` tests (Phase 4
# example tests requiring a running Docker daemon + the
# `albertogarob/whistlerlib:test` image, many minutes for a full bring-up).
# Opt in with `-m slow`, `-m docker`, or `-m 'slow or docker'`.
addopts = "-m 'not slow and not docker' --import-mode=importlib"
markers = [
    "slow: tests that take >5s, sentiment model load, heavy compute. Excluded by default.",
    "docker: example tests that require a running local Docker cluster (Compose). Excluded by default; opt in with `-m docker`.",
]

[tool.coverage.run]
source = ["src/whistlerlib"]
omit = [
    # R-subprocess wrappers and igraph coonet edge extractors run only
    # end-to-end (Phase 4), `getMFHashtags.py` etc. shell out to Rscript,
    # so unit-testing them in isolation would mean mocking the whole
    # subprocess interface and yields no real signal. The thin `algs.py`
    # dispatcher in each package IS unit-tested in `tests/unit/dask/`.
    "src/whistlerlib/dask/r_algs/funcs/*",
    "src/whistlerlib/dask/coonet_algs/funcs/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "tests/fixtures"]

[tool.ruff.lint]
# Start permissive on this legacy codebase, pyflakes (real bugs) +
# isort (import hygiene) only. Style rules (E/W) can be enabled in
# follow-up PRs as legacy code gets touched.
select = ["F", "I"]

[tool.ruff.lint.per-file-ignores]
# __init__.py files re-export symbols by importing them. F401 (imported but
# unused) is the wrong rule there, the import IS the re-export.
"**/__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["src/whistlerlib"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
